force-app/main/default/objects/Group__c/fields/Curator__c.field-meta.xml
<CustomField>
    <fullName>Curator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curator</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>