force-app/main/default/objects/Group__c/fields/Curator_is_Dean_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Curator_is_Dean_of_Department__c</fullName>
    <formula>IF(Curator__r.Id = Department__r.Dean__r.Id, TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Curator is Dean of Department</label>
    <type>Checkbox</type>
</CustomField>