force-app/main/default/objects/Group__c/fields/Education_Form__c.field-meta.xml
<CustomField>
    <fullName>Education_Form__c</fullName>
    <label>Education Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>full-time</fullName>
            </value>
            <value>
                <fullName>distance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>