force-app/main/default/objects/Group__c/fields/Students_Amount__c.field-meta.xml
<CustomField>
    <fullName>Students_Amount__c</fullName>
    <label>Students Amount</label>
    <summaryForeignKey>Student__c.Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>